force-app/main/default/objects/Training__c/fields/L_TC_Attendee_Limit__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Attendee_Limit__c</fullName>
    <description>Attendee Limit</description>
    <label>Attendee Limit</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>