force-app/main/default/objects/Training__c/fields/L_TC_Department__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Department__c</fullName>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>