force-app/main/default/objects/Training__c/fields/L_TC_Location__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Location__c</fullName>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>