force-app/main/default/objects/Training__c/fields/L_TC_Number_of_preskills__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Number_of_preskills__c</fullName>
    <label># of Prerequisite Skills</label>
    <summaryForeignKey>TrainingPreSkills__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>