force-app/main/default/objects/Training__c/fields/L_TC_Number_of_Registrations__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Number_of_Registrations__c</fullName>
    <label># of Registrations</label>
    <summaryForeignKey>Training_Attendee__c.L_TC_Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>