force-app/main/default/objects/Training__c/fields/L_TC_Number_of_skills__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Number_of_skills__c</fullName>
    <label># of Skills</label>
    <summaryForeignKey>TrainingSkills__c.Training__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>