force-app/main/default/objects/Training__c/fields/L_TC_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Org_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
    <label>Org URL</label>
    <type>Text</type>
</CustomField>