force-app/main/default/objects/Training__c/fields/L_TC_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training_Date__c</fullName>
    <description>Training Date</description>
    <label>Training Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>