force-app/main/default/objects/Training__c/fields/L_TC_Training_Duration__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training_Duration__c</fullName>
    <description>Difference between the Start and FInish Time in minutes</description>
    <formula>(HOUR(L_TC_Training_Finish_Time__c) - HOUR(L_TC_Training_Time__c))*60+ (MINUTE(L_TC_Training_Finish_Time__c) - MINUTE(L_TC_Training_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Duration (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>