force-app/main/default/objects/Training__c/fields/L_TC_Training_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training_Finish_Time__c</fullName>
    <description>Training Finish time</description>
    <label>Training Finish Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>