force-app/main/default/objects/Training__c/fields/L_TC_Training_Time__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training_Time__c</fullName>
    <description>Training Time</description>
    <label>Training Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>