force-app/main/default/objects/Training__c/validationRules/Cannot_Update_Cancelled_Or_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Cancelled_Or_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(L_TC_Status__c),
OR(
   ISPICKVAL(PRIORVALUE(L_TC_Status__c),&quot;Cancelled&quot;),
   ISPICKVAL(PRIORVALUE(L_TC_Status__c),&quot;Completed&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>L_TC_Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed for a &quot;Completed&quot; or &quot;Cancelled&quot; training.</errorMessage>
</ValidationRule>