force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Location__c</columns>
    <columns>L_TC_Training_Date__c</columns>
    <columns>L_TC_Training_Time__c</columns>
    <columns>L_TC_Attendee_Limit__c</columns>
    <columns>L_TC_Number_of_Registrations__c</columns>
    <columns>L_TC_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>