force-app/main/default/objects/Training__c/listViews/L_TC_Upcoming_Trainings.listView-meta.xml
<ListView>
    <fullName>L_TC_Upcoming_Trainings</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Training_Date__c</columns>
    <columns>L_TC_Training_Time__c</columns>
    <columns>L_TC_Attendee_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_TC_Training_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Trainings</label>
</ListView>