force-app/main/default/objects/Training__c/listViews/Trainings_This_Month.listView-meta.xml
<ListView>
    <fullName>Trainings_This_Month</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Training_Date__c</columns>
    <columns>L_TC_Training_Time__c</columns>
    <columns>L_TC_Attendee_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_TC_Training_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Trainings - This Month</label>
</ListView>