force-app/main/default/objects/Training__c/listViews/Trainings_Today_or_Tomorrow.listView-meta.xml
<ListView>
    <fullName>Trainings_Today_or_Tomorrow</fullName>
    <columns>NAME</columns>
    <columns>L_TC_Training_Date__c</columns>
    <columns>L_TC_Training_Time__c</columns>
    <columns>L_TC_Attendee_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_TC_Training_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:1</value>
    </filters>
    <label>Trainings - In 24 Hours</label>
</ListView>